--- a/RMP.Solution/appsettings.json
+++ b/RMP.Solution/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLConnection": "Data Source=rmp.db"
+  },
+  "frontend_url": "http://localhost:3000"
 }
