--- a/RMP.Solution/RMP.Host.csproj
+++ b/RMP.Solution/RMP.Host.csproj
@@ -12,9 +12,12 @@
         <PackageReference Include="Carter" Version="8.0.0" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
         <PackageReference Include="MediatR" Version="12.4.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.11" />
         <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="8.0.11" />
+        <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.11" />
         <PackageReference Include="Riok.Mapperly" Version="4.1.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
