fix/overall-fixes

--- a/RMP.Solution/appsettings.json
+++ b/RMP.Solution/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SQLConnection": "Data Source=rmp.db"
+    "SQLConnection": "Data Source=rmpu.db"
   },
   "frontend_url": "http://localhost:3000"
 }
